--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e26c5534-b49e-45b9-a659-3828ed53ed2d"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
